Fix the spacing on prefooter

--- a/index.css
+++ b/index.css
@@ -168,7 +168,7 @@ ul {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
-  top: 14rem;
+  top: 14.5rem;
 }
 /* end of prefooter */
 
